map show the discription

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
+    <style>
+        .mapboxgl-popup {
+        max-width: 400px;
+        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        }
+        </style>
     <!--<section style="height: 30vh;">
         <section class="hero is-primary">
             <div class="hero-body" style="padding: 1.5rem;">
