Added add count

--- a/public/add_place.html
+++ b/public/add_place.html
@@ -39,6 +39,11 @@
                 </div>
                 <div class="container" style="display: flex;">
                     <div class="control" style="width:100%;">
+                        <input id="count" class="input is-medium is-rounded" type="number" placeholder="count">
+                    </div>
+                </div>
+                <div class="container" style="display: flex;">
+                    <div class="control" style="width:100%;">
                         <input id="source" class="input is-medium is-rounded" type="text" placeholder="Source">
                     </div>
                 </div>
