chagned the add place view

--- a/public/add_place.html
+++ b/public/add_place.html
@@ -3,11 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Visited Places</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <title>Healthylk.com</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+   <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js'></script>
+   <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css' type='text/css' />
+   <style>
+    #map {
+      top: 0;
+      bottom: 0;
+      width: 80%;
+      height: 30vh;
+    }
+</style>
 </head>
 <body>
     <section style="height: 100vh;">
@@ -19,9 +29,11 @@
                     Reported place 
                 </h1>
                 <p class="subtitle">
-                    Below you will find an user generated map of reported  places. 
-                    <br>Where you want to report?
+                    Where you want to report?
                 </p>
+            </div>
+            <div class="container" >
+                <div id='map'></div>
             </div>
             </div>
         </section>
@@ -29,7 +41,7 @@
             <form id="form">
                 <div class="container" style="display: flex;">
                     <div class="control has-icons-left" style="width:100%;">
-                        <input id="place" class="input is-medium is-rounded" type="text" placeholder="Where have you been to?">
+                        <input id="place" class="input is-medium is-rounded"  disabled type="text" placeholder="Where have you been to?">
                         <span class="icon is-left">
                             <i id="input-icon" class="fas fa-map-marker-alt"></i>
                         </span>
@@ -39,7 +51,7 @@
                 </div>
                 <div class="container" style="display: flex;">
                     <div class="control" style="width:100%;">
-                        <input id="count" class="input is-medium is-rounded" type="number" placeholder="count">
+                        <input id="count" class="input is-medium is-rounded"  type="number" placeholder="count">
                     </div>
                 </div>
                 <div class="container" style="display: flex;">
@@ -67,5 +79,8 @@
         </section>
     </section>
       <script src="./js/add_place.js"></script>
+      <script>
+    
+      </script>
 </body>
 </html>
